<LinearLayout
	xmlns:android="http://schemas.android.com/apk/res/android"
	xmlns:app="http://schemas.android.com/apk/res-auto"
	xmlns:tools="http://schemas.android.com/tools"
	android:layout_width="match_parent"
	android:layout_height="match_parent"
	android:orientation="vertical">
	<LinearLayout
		android:id="@+id/linear10"
		android:layout_width="match_parent"
		android:layout_height="wrap_content"
		android:layout_marginLeft="15dp"
		android:layout_marginTop="28dp"
		android:gravity="center_vertical"
		android:orientation="horizontal">
		<TextView
			android:id="@+id/text_big_calc"
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			android:padding="8dp"
			android:text="@string/big_name"
			android:textSize="40sp" />
		<LinearLayout
			android:id="@+id/linear11"
			android:layout_width="match_parent"
			android:layout_height="wrap_content"
			android:gravity="right|center_vertical"
			android:orientation="horizontal">
			<ImageView
				android:id="@+id/imageview1"
				android:layout_width="38dp"
				android:layout_height="38dp"
				android:layout_marginRight="9dp"
				android:padding="6dp"
				android:src="@drawable/icon_settings_round"
				android:scaleType="fitXY"
				android:layout_gravity="right" />
		</LinearLayout>
	</LinearLayout>
	<LinearLayout
		android:id="@+id/linear1"
		android:layout_width="match_parent"
		android:layout_height="wrap_content"
		android:padding="8dp"
		android:background="?colorSurfaceVariant"
		android:orientation="vertical">
		<TextView
			android:id="@+id/input"
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			android:layout_marginLeft="15dp"
			android:text="@string/first"
			android:textSize="25sp"
			android:textColor="?colorOnSurface" />
		<TextView
			android:id="@+id/input2"
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			android:layout_marginLeft="15dp"
			android:text="@string/second"
			android:textSize="20sp"
			android:textColor="?colorOnSurfaceVariant" />
	</LinearLayout>
	<LinearLayout
		android:id="@+id/linear2"
		android:layout_width="match_parent"
		android:layout_height="wrap_content"
		android:padding="8dp"
		android:background="?colorOnSurfaceInverse"
		android:gravity="right"
		android:orientation="horizontal">
		<TextView
			android:id="@+id/textview1"
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			android:layout_marginRight="15dp"
			android:text="@string/answer"
			android:textSize="20sp" />
		<TextView
			android:id="@+id/text_mode"
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			android:text="1"
			android:textSize="12sp" />
		<TextView
			android:id="@+id/dmode"
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			android:text="N"
			android:textSize="12sp" />
	</LinearLayout>
	<LinearLayout
		android:id="@+id/linear8"
		android:layout_width="match_parent"
		android:layout_height="wrap_content"
		android:paddingTop="8dp"
		android:paddingBottom="8dp"
		android:orientation="vertical">
		<LinearLayout
			android:id="@+id/linear12"
			android:layout_width="match_parent"
			android:layout_height="wrap_content"
			android:padding="8dp"
			android:gravity="center_vertical"
			android:orientation="horizontal">
			<TextView
				android:id="@+id/textview2"
				android:layout_width="wrap_content"
				android:layout_height="wrap_content"
				android:layout_marginLeft="15dp"
				android:layout_marginRight="10dp"
				android:text="1"
				android:textSize="12sp" />
			<SeekBar
				android:id="@+id/seekbar1"
				android:layout_width="match_parent"
				android:layout_height="wrap_content"
				android:padding="8dp"
				android:max="3" />
		</LinearLayout>
		<LinearLayout
			android:id="@+id/linear3"
			android:layout_width="match_parent"
			android:layout_height="500dp"
			android:layout_marginTop="12dp"
			android:background="?colorOnSurfaceInverse"
			android:orientation="vertical">
			<LinearLayout
				android:id="@+id/linear9"
				android:layout_width="match_parent"
				android:layout_height="wrap_content"
				android:paddingLeft="8dp"
				android:paddingTop="8dp"
				android:paddingRight="8dp"
				android:orientation="horizontal">
				<Button
					android:id="@+id/button17"
					android:layout_width="wrap_content"
					android:layout_height="wrap_content"
					android:layout_marginRight="5dp"
					android:padding="8dp"
					android:text="AC"
					android:textSize="16sp" />
				<Button
					android:id="@+id/button18"
					android:layout_width="wrap_content"
					android:layout_height="wrap_content"
					android:layout_marginRight="5dp"
					android:padding="8dp"
					android:text="N_MODE"
					android:textSize="16sp" />
				<Button
					android:id="@+id/button19"
					android:layout_width="wrap_content"
					android:layout_height="wrap_content"
					android:layout_marginRight="5dp"
					android:padding="8dp"
					android:textSize="16sp"
					android:enabled="false" />
				<Button
					android:id="@+id/button20"
					android:layout_width="wrap_content"
					android:layout_height="wrap_content"
					android:layout_marginLeft="10dp"
					android:padding="8dp"
					android:text="÷"
					android:textSize="16sp"
					android:layout_weight="1" />
			</LinearLayout>
			<LinearLayout
				android:id="@+id/linear4"
				android:layout_width="match_parent"
				android:layout_height="wrap_content"
				android:paddingLeft="8dp"
				android:paddingTop="8dp"
				android:paddingRight="8dp"
				android:orientation="horizontal">
				<Button
					android:id="@+id/button1"
					android:layout_width="wrap_content"
					android:layout_height="wrap_content"
					android:layout_marginRight="5dp"
					android:padding="8dp"
					android:text="7"
					android:textSize="16sp" />
				<Button
					android:id="@+id/button2"
					android:layout_width="wrap_content"
					android:layout_height="wrap_content"
					android:layout_marginRight="5dp"
					android:padding="8dp"
					android:text="8"
					android:textSize="16sp" />
				<Button
					android:id="@+id/button3"
					android:layout_width="wrap_content"
					android:layout_height="wrap_content"
					android:layout_marginRight="5dp"
					android:padding="8dp"
					android:text="9"
					android:textSize="16sp" />
				<Button
					android:id="@+id/button4"
					android:layout_width="wrap_content"
					android:layout_height="wrap_content"
					android:layout_marginLeft="10dp"
					android:padding="8dp"
					android:text="×"
					android:textSize="16sp"
					android:layout_weight="1" />
			</LinearLayout>
			<LinearLayout
				android:id="@+id/linear5"
				android:layout_width="match_parent"
				android:layout_height="wrap_content"
				android:paddingLeft="8dp"
				android:paddingTop="8dp"
				android:paddingRight="8dp"
				android:orientation="horizontal">
				<Button
					android:id="@+id/button5"
					android:layout_width="wrap_content"
					android:layout_height="wrap_content"
					android:layout_marginRight="5dp"
					android:padding="8dp"
					android:text="4"
					android:textSize="16sp" />
				<Button
					android:id="@+id/button6"
					android:layout_width="wrap_content"
					android:layout_height="wrap_content"
					android:layout_marginRight="5dp"
					android:padding="8dp"
					android:text="5"
					android:textSize="16sp" />
				<Button
					android:id="@+id/button7"
					android:layout_width="wrap_content"
					android:layout_height="wrap_content"
					android:layout_marginRight="5dp"
					android:padding="8dp"
					android:text="6"
					android:textSize="16sp" />
				<Button
					android:id="@+id/button8"
					android:layout_width="wrap_content"
					android:layout_height="wrap_content"
					android:layout_marginLeft="10dp"
					android:padding="8dp"
					android:text="-"
					android:textSize="16sp"
					android:layout_weight="1" />
			</LinearLayout>
			<LinearLayout
				android:id="@+id/linear6"
				android:layout_width="match_parent"
				android:layout_height="wrap_content"
				android:paddingLeft="8dp"
				android:paddingTop="8dp"
				android:paddingRight="8dp"
				android:orientation="horizontal">
				<Button
					android:id="@+id/button9"
					android:layout_width="wrap_content"
					android:layout_height="wrap_content"
					android:layout_marginRight="5dp"
					android:padding="8dp"
					android:text="1"
					android:textSize="16sp" />
				<Button
					android:id="@+id/button10"
					android:layout_width="wrap_content"
					android:layout_height="wrap_content"
					android:layout_marginRight="5dp"
					android:padding="8dp"
					android:text="2"
					android:textSize="16sp" />
				<Button
					android:id="@+id/button11"
					android:layout_width="wrap_content"
					android:layout_height="wrap_content"
					android:layout_marginRight="5dp"
					android:padding="8dp"
					android:text="3"
					android:textSize="16sp" />
				<Button
					android:id="@+id/button12"
					android:layout_width="wrap_content"
					android:layout_height="wrap_content"
					android:layout_marginLeft="10dp"
					android:padding="8dp"
					android:text="+"
					android:textSize="16sp"
					android:layout_weight="1" />
			</LinearLayout>
			<LinearLayout
				android:id="@+id/linear7"
				android:layout_width="match_parent"
				android:layout_height="wrap_content"
				android:paddingLeft="8dp"
				android:paddingTop="8dp"
				android:paddingRight="8dp"
				android:orientation="horizontal">
				<Button
					android:id="@+id/button13"
					android:layout_width="wrap_content"
					android:layout_height="wrap_content"
					android:layout_marginRight="5dp"
					android:padding="8dp"
					android:textSize="16sp"
					android:enabled="false" />
				<Button
					android:id="@+id/button14"
					android:layout_width="wrap_content"
					android:layout_height="wrap_content"
					android:layout_marginRight="5dp"
					android:padding="8dp"
					android:text="0"
					android:textSize="16sp" />
				<Button
					android:id="@+id/button15"
					android:layout_width="wrap_content"
					android:layout_height="wrap_content"
					android:layout_marginRight="5dp"
					android:padding="8dp"
					android:text="."
					android:textSize="16sp" />
				<Button
					android:id="@+id/button16"
					android:layout_width="wrap_content"
					android:layout_height="wrap_content"
					android:layout_marginLeft="10dp"
					android:padding="8dp"
					android:text="="
					android:textSize="16sp"
					android:layout_weight="1" />
			</LinearLayout>
		</LinearLayout>
	</LinearLayout>
</LinearLayout>
